<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activitys.Register">

        <TextView
            android:id="@+id/shape_registration"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/shapes"
            android:shadowColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txt_registration"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@mipmap/kid_logo"
            app:civ_border_color="@color/black"
            app:civ_border_width="@dimen/_1sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shape_registration" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_to_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_70sdp"
            android:backgroundTint="@color/orange"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/_70sdp"
            app:layout_constraintTop_toBottomOf="@id/shape_registration" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_reg_user_name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:hint="@string/user_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_reg_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:singleLine="true"
                android:typeface="serif" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_reg_Email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:hint="@string/e_mail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_reg_user_name1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_reg_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:typeface="serif" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_reg_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:hint="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_reg_Email1"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="20"
         >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:typeface="serif"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_Regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/shape_of_button"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_reg_password1" />

        <ProgressBar
            android:id="@+id/prog_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Regist"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>